# Argus

./: .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: ci.yml
packaging/linux/: PKGBUILD  argus.desktop  argus.spec  build-appimage.sh  build-deb.sh  build-rpm.sh
packaging/macos/: build-dmg.sh
packaging/windows/: argus.nsi  build-windows.ps1
src/: main.cpp
src/cli/: ConsoleReport.cpp  ConsoleReport.h
src/core/: AudioBuffer.h  ChannelLayout.cpp  ChannelLayout.h  Decoder.cpp  Decoder.h  Engine.cpp  Engine.h  Issue.h  Profile.cpp  Profile.h  ProfileStore.cpp  ProfileStore.h  Report.cpp  Report.h  ReportInfo.h  Util.h
src/core/analysis/: Analyses.h  Clicks.cpp  Clipping.cpp  Dropouts.cpp  Loudness.cpp  Metadata.cpp  Phase.cpp  Silence.cpp  Spectral.cpp
src/core/decode/: DecodeApple.cpp  DecodeFfmpeg.cpp  DecodeNone.cpp  DecodeWindows.cpp  PlatformDecode.h
src/core/dsp/: Envelope.cpp  Envelope.h  Fft.cpp  Fft.h
src/core/export/: CsvExport.cpp  EmbeddedFonts.cpp  EmbeddedFonts.h  EmbeddedLogo.cpp  EmbeddedLogo.h  Exports.h  JsonExport.cpp  PdfExport.cpp  PngExport.cpp
src/core/render/: Colormap.h  Spectrogram.cpp  Spectrogram.h
src/ui/: App.cpp  CMakeLists.txt  ImageDecode.cpp  ImageDecode.h  Info.plist.in  MacMenu.h  MacMenu.mm  Player.cpp  Player.h  Settings.cpp  Settings.h  Texture.cpp  Texture.h
src/ui/resources/: argus.icns  argus.rc
tests/: make_fixtures.py  run_tests.sh
tools/: embed_font.py  make_icon.py
